// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`srcset-loader should emit files 1`] = `
"
var url = __webpack_public_path__ + \\"asset.jpg\\";

export default url;

export var src = {
	id: \\"jpg640\\",
	format: \\"jpg\\",
	type: \\"image/jpeg\\",
	width: 640,
	height: 480,
	url: url
};

export var srcSet = [{
	id: \\"webp640\\",
	format: \\"webp\\",
	type: \\"image/webp\\",
	width: 640,
	height: 480,
	url: __webpack_public_path__ + \\"asset.webp\\"
}, {
	id: \\"webp560\\",
	format: \\"webp\\",
	type: \\"image/webp\\",
	width: 560,
	height: 420,
	url: __webpack_public_path__ + \\"asset.webp\\"
}, {
	id: \\"webp320\\",
	format: \\"webp\\",
	type: \\"image/webp\\",
	width: 320,
	height: 240,
	url: __webpack_public_path__ + \\"asset.webp\\"
}, src, {
	id: \\"jpg560\\",
	format: \\"jpg\\",
	type: \\"image/jpeg\\",
	width: 560,
	height: 420,
	url: __webpack_public_path__ + \\"asset.jpg\\"
}, {
	id: \\"jpg320\\",
	format: \\"jpg\\",
	type: \\"image/jpeg\\",
	width: 320,
	height: 240,
	url: __webpack_public_path__ + \\"asset.jpg\\"
}];

export var srcMap = {
	\\"webp640\\": __webpack_public_path__ + \\"asset.webp\\",
	\\"webp560\\": __webpack_public_path__ + \\"asset.webp\\",
	\\"webp320\\": __webpack_public_path__ + \\"asset.webp\\",
	\\"jpg640\\": url,
	\\"jpg560\\": __webpack_public_path__ + \\"asset.jpg\\",
	\\"jpg320\\": __webpack_public_path__ + \\"asset.jpg\\"
};
"
`;

exports[`srcset-loader should emit files 2`] = `"module.exports = __webpack_public_path__ + \\"asset.jpg\\";"`;

exports[`srcset-loader should use custom generator and emit file 1`] = `
"
var url = \\"\\";

export default url;

export var src = null;

export var srcSet = [];

export var srcMap = {
	
};
"
`;

exports[`srcset-loader should use custom generator and emit file 2`] = `"module.exports = \\"\\";"`;

exports[`srcset-loader should use custom generator and image url 1`] = `
"
var url = \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\";

export default url;

export var src = {
	id: \\"jpg640\\",
	format: \\"jpg\\",
	type: \\"image/jpeg\\",
	width: 640,
	height: 480,
	url: url
};

export var srcSet = [{
	id: \\"webp640\\",
	format: \\"webp\\",
	type: \\"image/webp\\",
	width: 640,
	height: 480,
	url: \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\"
}, {
	id: \\"webp640\\",
	format: \\"webp\\",
	type: \\"image/webp\\",
	width: 640,
	height: 480,
	url: \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\"
}, {
	id: \\"jpg640\\",
	format: \\"jpg\\",
	type: \\"image/jpeg\\",
	width: 640,
	height: 480,
	url: \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\"
}, src];

export var srcMap = {
	\\"webp640\\": \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\",
	\\"webp640\\": \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\",
	\\"jpg640\\": \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\",
	\\"jpg640\\": url
};
"
`;

exports[`srcset-loader should use custom generator and image url 2`] = `"module.exports = \\"https://my.imgproxy.com/0df8e6d6db01958bd60d7406da7ff4f7.jpg\\";"`;
